--- a/EbayProject/test-output/emailable-report.html
+++ b/EbayProject/test-output/emailable-report.html
@@ -9,11 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">54,419</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">99,515</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.ebay.qa.testCases.GiftCardsPageTest</td><td><a href="#m0">clickOnCouponsLinkTextTest</a></td><td rowspan="1">1566523869956</td><td rowspan="1">2332</td></tr><tr class="passedeven"><td><a href="#m1">giftCardsPageTitleTest</a></td><td rowspan="1">1566523897468</td><td rowspan="1">20</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.ebay.qa.testCases.DailyDealsPageTest</td><td><a href="#m0">clickOnFeaturedLinkTest</a></td><td rowspan="1">1566534091392</td><td rowspan="1">1661</td></tr><tr class="passedeven"><td><a href="#m1">clickOnTechPageLinkTest</a></td><td rowspan="1">1566534110366</td><td rowspan="1">1571</td></tr><tr class="passedeven"><td><a href="#m2">dailyDealsPageTitleTest</a></td><td rowspan="1">1566534137024</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m3">varifyOtherDealsPresentTest</a></td><td rowspan="1">1566534158131</td><td rowspan="1">69</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.ebay.qa.testCases.GiftCardsPageTest#clickOnCouponsLinkTextTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.ebay.qa.testCases.GiftCardsPageTest#giftCardsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.ebay.qa.testCases.DailyDealsPageTest#clickOnFeaturedLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.ebay.qa.testCases.DailyDealsPageTest#clickOnTechPageLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.ebay.qa.testCases.DailyDealsPageTest#dailyDealsPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.ebay.qa.testCases.DailyDealsPageTest#varifyOtherDealsPresentTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
