--- a/EbayProject/test-output/old/Default suite/classes.html
+++ b/EbayProject/test-output/old/Default suite/classes.html
@@ -4,18 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ebay.qa.testCases.GiftCardsPageTest</td>
+<td>com.ebay.qa.testCases.DailyDealsPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clickOnCouponsLinkTextTest</td>
+<td>clickOnFeaturedLinkTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>giftCardsPageTitleTest</td>
+<td>clickOnTechPageLinkTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>dailyDealsPageTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>varifyOtherDealsPresentTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
