--- a/EbayProject/test-output/old/Default suite/methods.html
+++ b/EbayProject/test-output/old/Default suite/methods.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 19:30:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GiftCardsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:20:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:09</td>   <td>26047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiftCardsPageTest.clickOnCouponsLinkTextTest()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">clickOnCouponsLinkTextTest</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:31</td>   <td>31900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.clickOnFeaturedLinkTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">clickOnFeaturedLinkTest</td> 
   <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:12</td>   <td>28383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GiftCardsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:33</td>   <td>33564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:13</td>   <td>29247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GiftCardsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:33</td>   <td>34362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:37</td>   <td>53559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiftCardsPageTest.giftCardsPageTitleTest()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">giftCardsPageTitleTest</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:50</td>   <td>50874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.clickOnTechPageLinkTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">clickOnTechPageLinkTest</td> 
   <td>main@717386707</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>19/08/22 19:31:37</td>   <td>53583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GiftCardsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.GiftCardsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:51</td>   <td>52446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:21:53</td>   <td>53510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:17</td>   <td>77532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.dailyDealsPageTitleTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">dailyDealsPageTitleTest</td> 
+  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:17</td>   <td>77547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:17</td>   <td>78298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DailyDealsPageTest.setUp()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:38</td>   <td>98639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DailyDealsPageTest.varifyOtherDealsPresentTest()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">varifyOtherDealsPresentTest</td> 
+  <td>main@717386707</td>   <td></td> </tr>
+<tr bgcolor="c7a4e4">  <td>19/08/22 22:22:38</td>   <td>98710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DailyDealsPageTest.tearDown()[pri:0, instance:com.ebay.qa.testCases.DailyDealsPageTest@204f30ec]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@717386707</td>   <td></td> </tr>
 </table>
